# verifytest0

./: Anchor.toml  README.md  SECURITY.md
programs/verifytest0/: Cargo.toml
programs/verifytest0/src/: lib.rs
programs/verifytest0/src/instructions/: dweeb.rs  mod.rs
tests/: verifytest0.ts
